# portfolio-generator

./: .gitignore  README.md  main.py  pyproject.toml
data/: profile.yml
src/portfolio/: __init__.py  generate_html.py  html.py  load.py  main.py  models.py  pdf.py  validate.py
src/portfolio/data/: profile.yml
src/portfolio/data/FE/templates/: base.html.jinja  index.html.jinja
