[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "reportlab>=4.4.10",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]

[project.scripts]
portfolio = "portfolio.main:app"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
